[package]
name = "odpic-sys"
version = "0.1.1"
edition = "2021"
license = "UPL-1.0/Apache-2.0"
authors = ["Kubo Takehiro <kubo@jiubao.org>"]
description = "Bindings to Oracle Database Programming Interface for C (ODPI-C)."
documentation = "https://docs.rs/odpic-sys"
homepage = "https://github.com/kubo/odpic-sys"
repository = "https://github.com/kubo/odpic-sys"
categories = ["database", "external-ffi-bindings"]
keywords = ["database", "oracle"]

[features]
separate_blocking = []

[build-dependencies]
cc = "1.0"
